	  as SORT was broken on Windows

2017-04-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.h: always use COB_KEYWORD_INLINE (set by configure)
	  for COB_INLINE

2017-04-18 Ron Norman <rjn@inglenet.com>

	* numeric.c, common.c, coblocal.h: define ISFINITE depending on
	  HAVE_ISFINITE to either use 'isfinite' or 'finite' or '_finite'

2017-04-10  Brian Tiffin <btiffin@gnu.org>

	* common.c, common.h: remove cob_get_prog_pointer in preference to
	  cob_get_pointer.

2017-04-08  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c (in_last_n_chars): fixed underflow when field->size was
	  less than n, ultimately causing an invalid read.
	* fileio.c (indexed_open): fixed minor memory leak.

2017-03-31  Edward Hart <edward.dan.hart@gmail.com>

	* intrinsic.c: fixed minor buffer overflows in the formatted-date
	  functions (see bug #357).

2017-03-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_chain_setup): only set field's value if given on
	  command line, preserve program internal initialization otherwise

2017-03-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c (cob_module_enter): set cob_call_params from argc
	  for main programs
	* common.c (cob_chain_setup): don't set cob_call_params any more
	* common.c [_MSC_VER] (cob_get_current_date_and_time):
	  silence wrong warning 6011

2017-03-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* common.c: fix minor memory leaks in configuration code

2017-02-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* screenio.c: [!COB_GEN_SCREENIO] fixed zero_line_col_allowed
	  missing / superfluous in function declarations

2017-02-06  Ron Norman <rjn@inglenet.com>

	* common.c, common.h:
	  added cob_module_free so that structure gets freed within libcob
	* fileio.c, common.h:
	  Added new routines cob_file_external_addr, cob_file_malloc, cob_file_free
	  so that 'cob_file' is allocated within libcob.